test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/compound_assign_to_string.plx
#  Can't compound assign to string literal
pub fn main(none) i32 {
    "My string" += 1
    return 0
}
